[gd_scene load_steps=2 format=3 uid="uid://c35tktyy00ora"]

[ext_resource type="Script" uid="uid://gifc4lhi2c0b" path="res://scripts/hand.gd" id="1_eyfoh"]

[node name="Hand" type="Control"]
custom_minimum_size = Vector2(768, 256)
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -384.0
offset_top = -256.0
offset_right = 384.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 8
script = ExtResource("1_eyfoh")

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
[connection signal="child_exiting_tree" from="." to="." method="_on_child_exiting_tree"]
[connection signal="child_order_changed" from="." to="." method="_on_child_order_changed"]
[connection signal="resized" from="." to="." method="_on_resized"]
